fixed overflow

--- a/src/index.css
+++ b/src/index.css
@@ -58,6 +58,12 @@ span {
   height: 100vh;
 }
 
+.pay_acc {
+  object-fit: contain;
+  width: 100%;
+  height: 100%;
+}
+
 /* media query for max of 995px  */
 @media screen and (max-width: 990px) {
   .grid_left {
@@ -74,6 +80,6 @@ span {
 @media screen and (max-width: 1200px) {
   .left_header_text {
     margin: 0 40px;
-    margin-top: 40px;
+    margin-top: 20px;
   }
 }
