--- a/src/styles/carousel.css
+++ b/src/styles/carousel.css
@@ -54,7 +54,7 @@ img {
   width: 250px;
   /* height: 650px; */
   /* object-fit: cover; */
-  scale: 1.4;
+  scale: 1.1;
 }
 
 .card .image .dots {
